PyMaker/datas/object2/RawHTML/i8901/Python_DOC_referPages.python-2-and-python-3-mixing-error-with-virtual-environments.txt
<div class="post-text" itemprop="text">
<p>1) I installed python3.5 on windows with the installer. I checked set to path.</p>
<p>2) I installed python2.7 on windows with the installer. I checked set to path.</p>
<ul>
<li>python 3 is found in C:\Users\amand\AppData\Local\Programs\Python\Python35-32</li>
<li>python 2 is found in C:\Python27</li>
</ul>
<p>3) I open the command prompt</p>
<pre><code>&gt;&gt;&gt; python -m venv tutorial-env
C:\Python27\python.exe: No module named venv
</code></pre>
<p>Okay....so how about...</p>
<pre><code>&gt;&gt;&gt;py -3
Python 3.5.2 (v3.5.2:4def2a2901a5, Jun 25 2016, 22:01:18) [MSC v.1900 32 bit      
(Intel)] on win32
Type "help", "copyright", "credits" or "license" for more information.

&gt;&gt;&gt;python -m venv tutorial-env
&gt;File "&lt;stdin&gt;", line 1
python -m venv tutorial-env
             ^
SyntaxError: invalid syntax
</code></pre>
<p>Okay. I closed my command prompt and started a new one. The document said to use this...but...</p>
<pre><code>&gt;&gt;&gt;&gt;python3 -m venv tutorial-env
'python3' is not recognized as an internal or external command,
operable program or batch file.
</code></pre>
<p>Documentation that I am referring to
<a href="https://docs.python.org/3/tutorial/venv.html" rel="nofollow noreferrer">https://docs.python.org/3/tutorial/venv.html</a></p>
</div>
<div class="post-text" itemprop="text">
<p>to use a specific python you can do: </p>
<pre><code>python3 -m venv tutorial-env #for python 3
python2 -m venv tutorial-env #for python 2
#if you have multple versions of 3 or 2
python2.7 -m venv tutorial-env #for python 2.7
python3.5 -m venv tutorial-env #for python 3.5 or something along the lines
</code></pre>
<p><strong>EDIT</strong></p>
<p>If in Windows and the aboves not working:</p>
<pre><code>#In command prompt
py -3 #or -2
&gt;&gt;&gt; import venv
&gt;&gt;&gt; venv.main('tutorial-env')
</code></pre>
<p>or</p>
<pre><code>py -3 -m venv tutorial-env
</code></pre>
</div>
<span class="comment-copy">'python3' is not recognized as an internal or external command, operable program or batch file. As well as the other versions of pythons too.</span>
<span class="comment-copy">@BHok could you try: <code>python-3.5.2.exe -m venv tutorial-env</code></span>
<span class="comment-copy">I still get the same error.</span>
<span class="comment-copy">Sorry I wasn't much help I'm using OsX right right so I couldn't test anything. the last thing I can think of is <code>py -3 -m venv tutorial-env</code></span>
<span class="comment-copy">If that doesn't work, see my edit, that works for sure</span>
